Get sign up only for patient

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -3,8 +3,6 @@
 <p>Hi <%= @user.name %>,</p>
 
 <p>
-Welcome to the Bridgeport Medical Center! Click on the link below to activate your account:
+Welcome to the Bridgeport Medical Center!
 </p>
 
-<%= link_to "Activate", edit_account_activation_url(@user.activation_token,
-                                                    email: @user.email) %>
